--- a/css/nav.css
+++ b/css/nav.css
@@ -1,15 +1,24 @@
 header{
-    height:10vh;
+    height:11vh;
 }
 nav{
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     display: grid;
-    grid-template-columns: 90px auto auto auto auto auto auto auto;
+    grid-template-columns: 90px auto;
+    margin-right: 100px;
+
+}
+.tags{
+    border: 2px;
+    border-style: none none solid none;
+    display: grid;
+    grid-template-columns:  auto auto auto auto auto auto;
+    position: relative;
     justify-content: space-around;
     grid-gap: 50px;
-    margin-right: 100px;
+    margin-left: 100px;
 }
 nav span{
     margin-top: 25px;
@@ -18,4 +27,12 @@ nav span{
 nav a{
     text-decoration: none;
     color:#000;
+}
+.active{
+    border: 9px;
+    border-style:  solid none none none;
+    padding: 25px 15px 10px 15px;
+    border-top-color: #027691; 
+    background-color: #BCF2FF;
+    border-radius: 0px 0px 8px 8px;
 }
