--- a/css/nav.css
+++ b/css/nav.css
@@ -24,9 +24,9 @@ nav span{
     margin-top: 25px;
 }
 
-nav a{
+a{
     text-decoration: none;
-    color:#000;
+    color:black;
 }
 .active{
     border: 9px;
