--- a/css/hospital.css
+++ b/css/hospital.css
@@ -5,17 +5,8 @@
     margin-left:200px;
     width: 1090px;
 }
-.heading {
-    border: 1px;
-    border-style: none none solid none;
-    width: max-content;
-    padding: 10px;
-}
 .heading h2{
     margin-bottom: 5px;
-}
-.heading h4{
-    margin: 0px;
 }
 .block{
     height: 55px;
@@ -55,4 +46,18 @@
 }
 h1{
     margin: 5px;
+}
+.distance{
+    display: flex;
+    align-items:center;
+    gap: 10px;
+    border: 1px;
+    border-style: none none solid none;
+    width: max-content;
+    padding: 10px;
+}
+#km{
+    margin-top: auto;
+    margin-bottom: 4px;
+    height: 30px;
 }
