--- a/css/nav.css
+++ b/css/nav.css
@@ -16,14 +16,11 @@ nav{
     display: grid;
     grid-template-columns:  auto auto auto auto auto auto;
     position: relative;
+    align-items: center;
     justify-content: space-around;
     grid-gap: 50px;
     margin-left: 100px;
 }
-nav span{
-    margin-top: 25px;
-}
-
 a{
     text-decoration: none;
     color:black;
